core/src/test/resources/configurations/valid/instance-imbricated-1.instances
# Imbricated instances

instanceof vm {
	name: vm1;	# the VM name
	
	instanceof server {
		name: server;
		port: 9878;
	}
}
