core/src/test/resources/configurations/invalid/instanceof-imbricated-missing-closing-cb.instances
instanceof vm {
	name: my-vm;
	instanceof {
		name: server1;
	
}